  . Added filter support for $_SERVER in cgi/apache2 sapis.
  . Make sure PHP_SELF is filtered in Apache 1 sapi.
  . Fixed bug #39358 (INSTALL_HEADERS contains incorrect reference to
    php_filter.h).
- Fixed wrong signature initialization in imagepng (Takeshi Abe)
- Added optimization for imageline with horizontal and vertial lines (Pierre)
- Fixed bug #39702 (php crashes in the allocator on linux-m68k). (Dmitry)
- Fixed bug #39673 (file_get_contents causes bus error on certain offsets). 
  (Tony)
- Fixed bug #39663 (Memory leak in pg_get_notify() and a possible memory
  corruption on Windows in pgsql and pdo_pgsql extensions). (Ilia, matteo at
  beccati dot com)
- Fixed bug #39662 (Segfault when calling asXML() of a cloned SimpleXMLElement).
  (Rob, Tony)
- Fixed bug #39656 (crash when calling fetch() on a PDO statment object
  after closeCursor()). (Ilia, Tony)
- Fixed bug #39653 (ext/dba doesn't check for db-4.5 and db-4.4 when db4 
  support is enabled). (Tony)
- Fixed bug #39652 (Wrong negative results from memory_get_usage()). (Dmitry)
- Fixed bug #39648 (Implementation of PHP functions chown() and chgrp() are not
  thread safe). (Ilia, wharmby at uk dot ibm dot com)
- Fixed bug #39640 (Segfault with "Allowed memory size exhausted"). (Dmitry)
- Fixed bug #39623 (thread safety fixes on *nix for putenv() & mime_magic).
  (Ilia, wharmby at uk dot ibm dot com)
- Fixed bug #39621 (str_replace() is not binary safe on strings with equal 
  length). (Tony)
- Fixed bug #39613 (Possible segfault in imap initialization due to missing 
  module dependency). (wharmby at uk dot ibm dot com, Tony)
- Fixed bug #39602 (Invalid session.save_handler crashes PHP). (Dmitry)
- Fixed bug #39583 (ftp_put() does not change transfer mode to ASCII). (Tony)
- Fixed bug #39576 (array_walk() doesn't separate userdata zval). (Tony)
- Fixed bug #39564 (PDO::errorInfo() returns inconsistent information when 
  sqlite3_step() fails). (Tony)